--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Project TTCNPM-182-20",
   "main": "index.js",
   "scripts": {
-    "start": "node bin/www"
+    "start": "nodemon bin/www"
   },
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.5.0",
-    "firebase": "^5.8.5"
+    "firebase": "^5.8.5",
+    "firebase-admin": "^7.2.0",
+    "nodemon": "^1.18.11"
   },
   "keywords": [
     "node",
