--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-ejs-layouts": "^2.5.0",
     "firebase": "^5.8.5",
     "firebase-admin": "^7.2.0",
+    "firebaseui": "^3.5.2",
     "nodemon": "^1.18.11"
   },
   "keywords": [
