--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.8.1",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
@@ -14,8 +15,10 @@
     "firebase": "^5.8.5",
     "firebase-admin": "^7.2.0",
     "firebaseui": "^3.5.2",
+    "nodemailer": "^6.1.1",
     "nodemon": "^1.18.11",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "serve-favicon": "~2.3.0"
   },
   "keywords": [
     "node",
